--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
-    "umi-request": "^1.0.7"
+    "umi-request": "^1.0.7",
+    "webpack-theme-color-replacer": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
