--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
-    "umi-request": "^1.0.7",
-    "webpack-theme-color-replacer": "^1.1.3"
+    "umi-request": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
@@ -77,7 +76,8 @@
     "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.5",
-    "webpack-parallel-uglify-plugin": "^1.1.0"
+    "webpack-parallel-uglify-plugin": "^1.1.0",
+    "webpack-theme-color-replacer": "^1.2.5"
   },
   "engines": {
     "node": ">=8.0.0"
